# ci-test

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
ci-test/: gitlab_ci_local_parser.py  job_rules.py  main.py  rule_collator.py  rule_formatter.py  rule_printer.py
src/ci-test/: __main__.py  cli.py  gitlab_ci_local_parser.py  main.py
src/ci_test/: __main__.py  cli.py  gitlab_ci_local_parser.py  main.py  rule_collator.py  rule_formatter.py
test/: input.json  job_no_rules_input.json  job_no_rules_output.json  output.json  test_integration_main.py
